tests/type_errors/fold_callback_mismatch.nos
# expect_error: type mismatch
# Test that fold callback type mismatch is caught

main() = {
    nums = [1, 2, 3]
    nums.fold(0, (acc, x) => acc ++ "string")
}
